<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical">

    <Button
        android:id="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_button"
        android:gravity="start"
        android:paddingBottom="16dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/switchButton"
        android:background="@color/colorPrimaryDark"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewLine"/>
</RelativeLayout>