...
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ripple"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:background="@color/textTransparent"
                android:ellipsize="end"
...
