...
        <RelativeLayout
            android:layout_below="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

...
